--- a/html/changelogs_infinity/solar.yml
+++ b/html/changelogs_infinity/solar.yml
@@ -10,3 +10,4 @@ delete-after: True
 # Please surround your changes in  double quotes ("), as certain characters otherwise screws up compiling. The quotes will not show up in the changelog.
 changes: 
   - rscadd: "В наборе первой помощи при ожогах появилась таблетка келотана."
+  - rscadd: "В наборе первой помощи при травмах появилась таблетка бикардина."
